NULL =

carddir = $(pkgdatadir)/cards

dist_card_DATA = \
	anglo.svg \
	anglo_bitmap.svg \
	bellot.svg \
	bonded.svg \
	dondorf.svg \
	gnomangelo.svg \
	gnomangelo_bitmap.svg \
	ornamental.svg \
	paris.svg \
	tango.svg \
	$(NULL)

EXTRA_DIST = \
	README.bellot \
	README.dondorf \
	README.ornamental \
	README.paris \
	$(NULL)

-include $(top_srcdir)/git.mk
